--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <div class="top">
         <div class="unsub">
         </div>
-        <a href="#" class="learn">Learn More</a>
+        <div class="text-div">
+            <div class="text1">Iesus servit</div>
+            <div class="text2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis, deserunt!</div>
+        </div>
+
+        <div class="learn2"><a href="#" class="learn">Learn More</a></div>
     </div>
     <div class="middle"></div>
     <div class="bottom"></div>
