--- a/index.html
+++ b/index.html
@@ -18,7 +18,17 @@
 
         <div class="learn2"><a href="#" class="learn">Learn More</a></div>
     </div>
-    <div class="middle"></div>
+    <div class="middle">
+        <div class="offer offer1">
+            <div class="imcontain1"></div>
+        </div>
+        <div class="offer offer2">
+            <div class="imcontain2"></div>
+        </div>
+        <div class="offer offer3">
+            <div class="imcontain3"></div>
+        </div>
+    </div>
     <div class="bottom"></div>
 </body>
 </html>
