--- a/index.html
+++ b/index.html
@@ -21,14 +21,54 @@
     <div class="middle">
         <div class="offer offer1">
             <div class="imcontain1"></div>
+            <h2 class="offer1head">Holy Offer #1</h2>
+            <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, ipsum?</div>
+            <button class="moar">Show Me More</button>
         </div>
         <div class="offer offer2">
             <div class="imcontain2"></div>
+            <h2 class="offer2head">Holy Offer #2</h2>
+            <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, ipsum?</div>
+            <button class="moar">Show Me More</button>
         </div>
         <div class="offer offer3">
             <div class="imcontain3"></div>
+            <h2 class="offer3head">Holy Offer #3</h2>
+            <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, ipsum?</div>
+            <button class="moar">Show Me More</button>
         </div>
     </div>
-    <div class="bottom"></div>
+    <div class="bottom">
+        <div class="newbeginning">
+            <div class="newtext">New <a class="life">Life</a>, New <a class="begin">Beginning</a></div>
+            <button class="video">Watch Video ></button>
+        </div>
+        <!-- <div class="offerdesc offer1desc">
+                <h2 class="offer1holy">Holy Offer #1</h2>
+                <div class="offer1text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti repellendus error ullam fugit alias suscipit!</div>
+        </div>
+        <div class="offerimg offer1img">-->
+            <!--<img src="img/crusader.jpg">-->
+
+        <!--</div>
+        <div class="offerimg offer2img">-->
+            <!--<img src="img/crusader.jpg">-->
+
+        <!--</div>
+        <div class="offerdesc offer2desc">
+            <h2 class="offer2holy">Holy Offer #2</h2>
+            <div class="offer2text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti repellendus error ullam fugit alias suscipit!</div>
+        </div>-->
+        <table>
+            <tr>
+                <td class="offer1text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti repellendus error ullam fugit alias suscipit!</td>
+                <td class="holyimg1"><img src="img/crusader.jpg"></td>
+            </tr>
+            <tr>
+                <td class="holyimg2"><img src="img/crusader.jpg"></td>
+                <td class="offer2text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti repellendus error ullam fugit alias suscipit!</td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
