--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 <body>
     <div class="top">
         <div class="unsub">
+            <table>
+                <tr>
+                    <td class="unsubicon"></td>
+                    <td class="unsubdesc">Ecclesia Catholica Romana</td>
+                    <td class="unsubunsub">Unsubsrcibe</td>
+                </tr>
+            </table>
         </div>
         <div class="text-div">
             <div class="text1">Iesus servit</div>
@@ -59,7 +66,7 @@
             <h2 class="offer2holy">Holy Offer #2</h2>
             <div class="offer2text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti repellendus error ullam fugit alias suscipit!</div>
         </div>-->
-        <table>
+        <table class="offertable">
             <tr>
                 <td class="offer1text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti repellendus error ullam fugit alias suscipit!</td>
                 <td class="holyimg1"><img src="img/crusader.jpg"></td>
@@ -67,6 +74,20 @@
             <tr>
                 <td class="holyimg2"><img src="img/crusader.jpg"></td>
                 <td class="offer2text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti repellendus error ullam fugit alias suscipit!</td>
+            </tr>
+        </table>
+        <!-- <div class="alllefts">
+            <div class="icon"></div>
+            <div class="allrighstext">All Rights Reserved</div>
+            <div class="links"></div>
+        </div> -->
+        <table class="alllefts">
+            <tr>
+                <td class="icon"></td>
+                <td class="allrighstext" style="color: #444">All Rights Resered</td>
+                <td class="links link1"></td>
+                <td class="links link2"></td>
+                <td class="links link3"></td>
             </tr>
         </table>
     </div>
